# lapce-extensions

./: .env  .env.example  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  Rocket.toml.example  app.json  diesel.toml  docker-compose.yml  fly.toml  gitpod.Dockerfile  nixpacks.toml  openapi.yml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci-rust.yml  clippy.yml  fly-io.yml
docs/: index.html  openapi.yml
infra/: Dockerfile.fly.io
marketplace/: Cargo.toml  index.html  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
marketplace/src/: App.svelte  app.css  main.rs  main.ts
marketplace/src/components/: NavBar.svelte  Sticky.svelte  UserIndicator.svelte
migrations/2022-09-14-212718_users_table/: up.sql
migrations/2022-09-15-173933_plugins-table/: down.sql  up.sql
prisma/: schema.prisma
prisma/migrations/20221009190213_user/: migration.sql
prisma/migrations/20221009192036_change_id_int_to_bigint/: migration.sql
prisma/migrations/20221015141330_add_plugin_and_version/: migration.sql
prisma/migrations/20221015143415_prerelease_versions/: migration.sql
prisma/migrations/20221021150108_user_id_autoincrement/: migration.sql
prisma/migrations/20221023204619_remove_author_field/: migration.sql
prisma_cli/: Cargo.toml
scripts/: build-frontend.sh  start.sh
server/: Cargo.toml
server/src/: db.rs  error.rs  github.rs  main.rs  plugin.rs  schema.rs  user.rs
src/: db.rs  error.rs  github.rs  main.rs  repository.rs  user.rs
src/db/: prisma.rs
src/repository/: fs_impl.rs  routes.rs  store_trait.rs
src/repository/fs_impl/: tests.rs
test_assets/: darkest.toml
