[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.0.0"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json", "serde_json", "secrets"] }
rocket_oauth2 = "0.5.0-rc.1"
octorust = "0.1.37"